syntax = "proto3";

package pb;

service BookstoreService {
  rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
  rpc GetBook(GetBookRequest) returns (BookResponse);
}

message GetBooksRequest {}

message GetBooksResponse {
  repeated Book books = 1;
}

message GetBookRequest {
  string book_id = 1;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  float price = 4;
  int32 quantity = 5;
}

message BookResponse {
  Book book = 1;
}
